# dmarc-report-notifier

./: .dockerignore  Dockerfile  README.md  pyproject.toml
dmarc_report_notifier/: __init__.py  cli.py
dmarc_report_notifier/templates/: message.html.j2  message.text.j2
examples/systemd/: dmarc-report-notifier.env  dmarc-report-notifier.service  dmarc-report-notifier.timer
