[project]
name = "dmarc-report-notifier"
version = "1.1.10"
description = "Headless periodic DMARC report handler"
license = "GPL-3.0-only"
authors = [{ name = "Andrew Kvalheim", email = "andrew@kvalhe.im" }]
readme = "README.md"
scripts.dmarc-report-notifier = "dmarc_report_notifier.cli:main"
requires-python = "~=3.10"
dependencies = [
  "jinja2>=3.1.2,<4",
  "jinja2-pluralize>=0.3.0,<0.4",
  "matrix-nio>=0.24, < 0.26",
  "parsedmarc>=8.3.2,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
build.targets.sdist.include = ["dmarc_report_notifier"]
build.targets.wheel.include = ["dmarc_report_notifier"]

[tool.bumpversion]
pre_commit_hooks = [
  "git diff-index --quiet HEAD -- 'uv.lock'",
  "uv lock --upgrade-package 'dmarc-report-notifier'",
  "git add 'uv.lock'",
]
commit = true
message = "Version {new_version}"
tag = true
tag_message = "Version {new_version}"
sign_tags = true
